--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,12 @@
+/************************
+*		MEASURMENTS		*
+************************/
+
 html	{
 	font-size: 10px;
 }
+
+$border-radius: 3px;
 
 @import 'reset';
 @import 'color';
@@ -13,6 +19,7 @@ body	{
 	font-weight: 300;
 	font-size: 13px;
 	line-height: 1.5em;	
+	cursor: default;
 }
 
 /************************
@@ -20,25 +27,105 @@ body	{
 ************************/
 
 header	{
-	background-color: $black;
-}
-
-nav	{
-	background-color: $red;
-	transition: width .5s;
+	padding: 0 1.5rem;
+	background-color: $grey1;
+	line-height: 5rem;
+	vertical-align: middle;
 	
-	.action-list li	{
-		width: 23rem;
-		padding: 0;
+	text-transform: uppercase;
+	letter-spacing: .03rem;
+	
+	h1	{
+		float: left;
+		color: $lightgreen;
+	}
+	
+	time	{
+		float: right;
+		color: $white;
 	}
 }
 
-main	{
+nav	{
+	background-color: $grey2;
+	border-right: 1px solid $grey6;
+	transition: width .5s;
+	
+	display: flex;
+	flex-direction: column;
+	
+	.action-list {
+		flex-grow: 0;
+
+		li	{
+			width: 25rem;
+			padding: 0;
+			border-bottom: 1px solid $grey6;
+			
+			img	{
+				padding: 1.5rem;
+			}
+			
+			&:hover	{
+				background-color: $lightgreen;
+				color: $white;
+			}
+			
+			&.active	{
+				background-color: $lightgreen;
+				color: $white;
+			}
+		}
+	}	
+	
+	.action-list.expand	{
+		flex-grow: 1;
+		position: relative;
+		opacity: .3;
+			
+		&:hover	{
+			cursor: pointer;
+			opacity: 1;
+		}
+		
+		li	{
+			position: absolute;
+			bottom: 0;
+			
+			&:hover	{
+				background-color: transparent;
+			}
+		}
+	}
+	
+	&.active	{
+		width: 23rem;
+	}
+}
+
+.center	{
 	background-color: $darkblue;
 }
 
+.content	{
+	background-color: $darkblue;
+}
+
+.content-main	{
+	background-color: $darkgreen;
+}
+
+.sidebar	{
+	background-color: $grey11;
+}
+
+.sidebar-details	{
+	background-color: $grey12;
+}
+
+
 footer	{
-	background-color: $black;
+	background-color: $grey1;
 }
 
 /************************
@@ -47,46 +134,72 @@ footer	{
 
 .toolbar	{
 	height: 5rem;
-	background-color: $lightblue;
+	background-color: $grey3;
 	transition: height .5s;
 	
-	&:hover	{
-			height: 15rem;
+	&.active	{
+		height: 10rem;
+	}
+	
+	li.right	{
+		width: 18rem;
 	}
 }
 
-.center	{
-	position: relative;
+.toolbar-content	{
+	height: 15rem;
+	width: 100%;
+	background-color: $grey13;
+	
+	.action-list li	{
+	//	float: none;
+	}
+	
+	input	{
+		float: left;
+		margin: 1rem 1rem;
+		width: 80px;
+		text-align: center;
+	}
 }
 
-.scale	{
-	background-color: $lightyellow;
-	position: absolute;
-	top: 0;
-	left: 0;
-}
 
 .action-list	{
+	transition: all .5s;
+
 	li	{
 		height: 5rem;
-		padding-left: 1rem;
-		padding-right: 1rem;
+		padding: 0 2rem;
 		float: left;
 		
 		line-height: 5rem;
 		vertical-align: middle;
 		
 		text-transform: uppercase;
+		letter-spacing: .03rem;
 		color: $white;
-		
+		transition: all .2s;	
+						
 		img	{
-			padding: 1.5rem;
-			width: 5rem;
+			padding: 1.5rem 1rem 1.5rem 0;
+			height: 5rem;
 			float: left;
+			
+			&.right	{
+				padding: 1.5rem 0rem 1.5rem 1rem;
+				float: right;
+			}
 		}
 		
 		&:hover	{
 			cursor: pointer;
+			background-color: $grey13;
+			color: $lightgreen;
+		}
+		
+		&.active	{
+			background-color: $grey13;
+			color: $lightgreen;			
 		}
 		
 		&.right	{
@@ -95,30 +208,51 @@ footer	{
 	}
 }
 
+input	{
+	width: 100%;
+	border-radius: $border-radius;
+	outline: none;
+	border: 1px solid $grey16;
+	height: 3rem;
+	line-height: 3rem;
+	vertical-align: middle;
+	padding: 0 .5rem;
+	margin-bottom: 1rem;
+	color: $white;
+	background-color: $grey15;
+	transition: background-color .2s;
+	cursor: auto;
+
+	
+	&:focus	{
+		outline: none;
+		background-color: $lightgreen;
+		color: $white;
+	}
+
+}
+
 /************************
-*		SCHEDULE		*
+*		STATES		*
 ************************/
 
-.scale-time	{
-	width: 5rem;
-	
-	li	{
-		height: 12rem;
-	}
+.state-1	{
+	background-color: $lightyellow;
+	color: $black !important;
 }
 
-.scale-room	{
-	width: 100%;
-	height: 5rem;
-	
-	li	{
-		width: 18rem;
-		height: 5rem;
-		float: left;
-	}
+.state-4	{
+	background-color: $lightblue;
 }
 
-.table	{
-	width: 2000px;
-	height: 2000px;
+.state-5	{
+	background-color: $darkblue;
 }
+
+
+/************************
+*	CENTER_VIEWS		*
+************************/
+
+@import 'center-view-schedule';
+
