--- a/styles/_structure.scss
+++ b/styles/_structure.scss
@@ -1,98 +1,179 @@
+/************************
+*		BODY		*
+************************/
+
 body	{
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
+	align-items: stretch;
+	
+	height: 100vh;
 }
 
-header	{
-	height: 5rem;
+nav	{
+	width: $smallUnit;
+	flex-grow: 0;
 	flex-shrink: 0;
-}
-
-footer	{
-	height: 3rem;
-	flex-shrink: 0;
+	
+	transition: width .5s;
+	
+	background-color: #FF0000;
+	
+	&.active	{
+		width: $smallUnit + $bigUnit;
+	}
 }
 
 main	{
 	flex-grow: 1;
 	
-	display: flex;
-	flex-direction: row;
-	overflow: hidden;
+	background-color: #FFFF00;
 }
+
+
+/************************
+*		NAV				*
+************************/
 
 nav	{
-	flex-shrink: 0;
-	width: 5rem;
-	overflow: hidden;
-}
-
-.center	{
-	flex-grow: 1;
-	position: relative;
-	transition: top 1s;
-}
-
-.center-view	{
 	display: flex;
 	flex-direction: column;
-}
-
-.toolbar	{
-	flex-shrink: 0;
-}
-
-.content	{
-	flex-grow: 1;
-	position: relative;
+	
 	overflow: hidden;
 	
-	display: flex;
-	flex-direction: row;
-	align-items: stretch;
-}
+	ul.action-list {
+		li {
+			width: $smallUnit + $bigUnit;
+			padding: 0;
 
-.content-main	{
-	flex-grow: 1;
+			img	{
+				height: $smallUnit;
+				width: $smallUnit;
+				
+				padding: 1.2rem;
+				margin-top: 0;
+				margin-right: .5rem;
+			}
+		}
+	}
 	
-	position: relative;
-	overflow: hidden;
-	
-	display: flex;
-	flex-direction: column;
-}
-
-.content-side	{
-	flex-grow: 1;
-	flex-shrink: 0;
-
-	overflow: hidden;
-	
-	width: 18rem;
-	transition: width .7s;
-	
-	display: flex;
-	flex-direction: row;
-	align-items: stretch;
+	ul.action-list:nth-of-type(2)	{
+		flex-grow: 1;
+		height: 100%;
 		
-	&.active	{
-		width: 5 * 18rem;
+		li {
+			height: 100%;
+		}
+		
+		&:hover	{
+			cursor: pointer;
+			background-color: lime;
+		}
 	}
 }
 
-.sidebar	{
-	width: 18rem;
-	position: relative;
-	flex-shrink: 0;
-	flex-grow: 1;
+/************************
+*		VIEW			*
+************************/
+
+.view	{
+	display: flex;
+	flex-direction: column;
+
+	width: 100%;
+	height: 100vh;
+			
+	.toolbar	{
+		width: 100%;
+		height: $smallUnit;
+		flex-grow: 0;
+		flex-shrink: 0;
+		
+		overflow: hidden;
+		
+		background-color: green;
+		
+		&.active	{
+			height: $smallUnit * 2;
+		}
+		
+		.toolbar-top	{
+			width: 100%;
+			height: $smallUnit;
+		}
+		
+		.toolbar-content	{
+			height: $smallUnit;
+			background-color: fuchsia;
+		}
+	}
 	
-	overflow: scroll;
-	float: left;
+	.center	{
+		display: flex;
+		flex-direction: row;
+		align-items: stretch;
+		
+		width: 100%;
+		flex-grow: 1;
+		flex-shrink: 1;
+		
+		background-color: navy;
+		
+		.center-main	{
+			flex-grow: 1;
+			flex-shrink: 1;
+			
+			overflow: hidden;
+			
+			background-color: maroon;
+		}
+		
+		.center-side	{
+			flex-shrink: 0;
+			
+			width: $bigUnit;
+			
+			overflow: hidden;
+			
+			background-color: silver;
+		}
+	}
 }
 
-.sidebar-details	{
+/************************
+*		ACTION-LIST		*
+************************/
+
+ul.action-list {
 	float: left;
-	width: 4 * 18rem;
-	flex-shrink: 0;
-	flex-grow: 1;
+
+	li	{
+		float: left;
+		
+		height: $smallUnit;
+		padding: 0 2rem;
+		overflow: hidden;
+		
+		list-style: none;
+		line-height: $smallUnit;
+		text-transform: uppercase;
+		
+		transition: background-color .3s;
+					
+		img	{
+			display: block;
+			float: left;
+	
+			width: 2rem;
+			height: 2rem;
+			
+			margin-top: ($smallUnit - 2rem) / 2;	
+			margin-right: 1rem;
+		}
+		
+		&:hover	{
+			cursor: pointer;
+			background-color: lime;
+		}
+	}
 }
