--- a/styles/style.css
+++ b/styles/style.css
@@ -97,6 +97,15 @@ html {
           user-select: none; }
 
 /************************
+*		BASECOLORS		*
+************************/
+/************************
+*		COLORSCALE		*
+************************/
+/************************
+*		UI COLORS		*
+************************/
+/************************
 *		BODY		*
 ************************/
 body {
@@ -126,7 +135,7 @@ nav {
           flex-shrink: 0;
   -webkit-transition: width 0.5s;
           transition: width 0.5s;
-  background-color: #FF0000; }
+  background-color: #363738; }
   nav.active {
     width: 25rem; }
 
@@ -134,8 +143,7 @@ main {
   -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
       -ms-flex-positive: 1;
-          flex-grow: 1;
-  background-color: #FFFF00; }
+          flex-grow: 1; }
 
 /************************
 *		NAV				*
@@ -150,16 +158,22 @@ nav {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
-  overflow: hidden; }
+  overflow: hidden;
+  border-right: 1px solid #262728; }
   nav ul.action-list li {
     width: 25rem;
-    padding: 0; }
+    padding: 0;
+    background-color: transparent; }
     nav ul.action-list li img {
       height: 5rem;
       width: 5rem;
       padding: 1.2rem;
       margin-top: 0;
       margin-right: 0.5rem; }
+    nav ul.action-list li:hover {
+      background-color: #414344; }
+    nav ul.action-list li.active {
+      background-color: #262728; }
   nav ul.action-list:nth-of-type(2) {
     position: relative;
     -webkit-box-flex: 1;
@@ -205,15 +219,19 @@ nav {
         -ms-flex-negative: 0;
             flex-shrink: 0;
     overflow: hidden;
-    background-color: green; }
+    border-bottom: 1px solid #262728;
+    background-color: #3b3c3d; }
     .view .toolbar.active {
       height: 10rem; }
     .view .toolbar .toolbar-top {
       width: 100%;
-      height: 5rem; }
+      height: 5rem;
+      border-bottom: 1px solid #262728; }
+      .view .toolbar .toolbar-top li.active {
+        border-right: 1px solid #262728; }
     .view .toolbar .toolbar-content {
       height: 5rem;
-      background-color: fuchsia; }
+      background-color: #363738; }
   .view .center {
     display: -webkit-box;
     display: -webkit-flex;
@@ -235,8 +253,7 @@ nav {
             flex-grow: 1;
     -webkit-flex-shrink: 1;
         -ms-flex-negative: 1;
-            flex-shrink: 1;
-    background-color: navy; }
+            flex-shrink: 1; }
     .view .center .center-main {
       -webkit-box-flex: 1;
       -webkit-flex-grow: 1;
@@ -245,15 +262,15 @@ nav {
       -webkit-flex-shrink: 1;
           -ms-flex-negative: 1;
               flex-shrink: 1;
-      overflow: hidden;
-      background-color: maroon; }
+      overflow: hidden; }
     .view .center .center-side {
       -webkit-flex-shrink: 0;
           -ms-flex-negative: 0;
               flex-shrink: 0;
       width: 20rem;
       overflow: hidden;
-      background-color: silver; }
+      border-left: 1px solid #262728;
+      background-color: #414344; }
 
 /************************
 *		ACTION-LIST		*
@@ -268,8 +285,10 @@ ul.action-list {
     list-style: none;
     line-height: 5rem;
     text-transform: uppercase;
-    -webkit-transition: background-color 0.3s;
-            transition: background-color 0.3s; }
+    background-color: #3b3c3d;
+    border-bottom: 1px solid #262728;
+    -webkit-transition: all 0.3s;
+            transition: all 0.3s; }
     ul.action-list li img {
       display: block;
       float: left;
@@ -279,11 +298,33 @@ ul.action-list {
       margin-right: 1rem; }
     ul.action-list li:hover {
       cursor: pointer;
-      background-color: lime; }
+      background-color: #414344; }
+    ul.action-list li.active {
+      background-color: #363738;
+      border-bottom: 1px solid transparent; }
 
+/************************
+*		SCROLLBARS		*
+************************/
+/*
+
+::-webkit-scrollbar {
+    width: .7rem;
+    height: .7rem;
+}
+
+::-webkit-scrollbar-track, ::-webkit-scrollbar-corner {
+	background-color: $grey2;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+	background-color: $grey5;
+}
+*/
 body {
   font-family: Roboto, Helvetica, Arial, sans-serif;
-  color: #FFFFFF;
+  color: white;
   font-weight: 300;
   font-size: 14px;
   line-height: 1.2em;
@@ -296,6 +337,7 @@ body {
 .schedule .toolbar .add-surgery {
   float: right; }
   .schedule .toolbar .add-surgery li {
+    border-left: 1px solid #262728;
     width: 20rem; }
 .schedule .center-main {
   position: relative;
@@ -322,17 +364,24 @@ body {
   float: left;
   z-index: 1;
   text-align: center;
-  background-color: olive; }
+  background-color: #414344;
+  border-right: 1px solid #3b3c3d; }
   .schedule .scale-time li {
-    height: 12rem;
+    height: 61px;
+    /*6rem + 1px */
+    margin-bottom: 59px;
+    /*6rem - 1px */
     padding-top: 0.5rem;
-    border-top: 1px solid black; }
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 1px dotted rgba(255, 255, 255, 0.1); }
     .schedule .scale-time li:first-child {
       border-top: none; }
 .schedule .scale-rooms {
   height: 5rem;
-  width: 220rem;
-  margin-left: 5rem; }
+  width: 240rem;
+  margin-left: 5rem;
+  background-color: #5c5e60;
+  border-bottom: 1px solid #414344; }
   .schedule .scale-rooms li {
     height: 5rem;
     width: 20rem;
@@ -343,23 +392,29 @@ body {
       .schedule .scale-rooms li abbr:before {
         content: "· "; }
     .schedule .scale-rooms li.active {
-      width: 60rem; }
+      width: 80rem; }
+.schedule .scale-overlay {
+  height: 5rem;
+  width: 5rem;
+  background: -webkit-linear-gradient(#414344 30%, transparent 130%);
+  background: linear-gradient(#414344 30%, transparent 130%);
+  z-index: 2; }
 .schedule .timetable-container {
   margin: 5rem 0 0 5rem;
-  overflow: hidden;
+  overflow: scroll;
   position: relative; }
 .schedule .timetable {
   height: 288rem;
-  width: 220rem;
-  background-color: lime; }
+  width: 240rem;
+  background-color: #5c5e60; }
 .schedule .column {
   float: left;
   width: 20rem;
   height: 288rem;
   overflow: hidden;
-  border-right: 1px solid black; }
+  border-right: 1px solid #414344; }
   .schedule .column.active {
-    width: 60rem; }
+    width: 80rem; }
   .schedule .column .column-main {
     position: relative;
     width: 20rem;
@@ -369,10 +424,13 @@ body {
       margin: 0;
       position: absolute;
       width: 100%;
-      border-top: 1px solid black; }
+      border-top: 1px solid rgba(255, 255, 255, 0.1); }
       .schedule .column .column-main hr:nth-of-type(odd) {
         border-style: dotted; }
   .schedule .column .column-details {
-    width: 40rem;
+    width: 60rem;
     height: 100%;
-    margin-left: 20rem; }
+    margin-left: 20rem;
+    background-color: #262728; }
+  .schedule .column:last-child {
+    border-right: none; }
