--- a/styles/_structure.scss
+++ b/styles/_structure.scss
@@ -109,9 +109,10 @@ nav	{
 		flex-shrink: 0;
 		
 		overflow: hidden;
-		
-		border-bottom: 1px solid $grey6;
 		background-color: $grey4;
+		border-bottom: 1px solid $grey6;
+		
+		transition: height .5s;
 		
 		&.active	{
 			height: $smallUnit * 2;
@@ -122,8 +123,10 @@ nav	{
 			height: $smallUnit;
 			border-bottom: 1px solid $grey6;
 			
+			li	{
+			}
+			
 			li.active	{
-				border-right: 1px solid $grey6;
 			}
 
 		}
@@ -177,10 +180,9 @@ ul.action-list {
 		list-style: none;
 		line-height: $smallUnit;
 		text-transform: uppercase;
+		letter-spacing: .04em;
 		
-		background-color: $grey4;
-		border-bottom: 1px solid $grey6;
-		
+		border: 1px solid transparent;
 		transition: all .3s;
 					
 		img	{
@@ -196,12 +198,23 @@ ul.action-list {
 		
 		&:hover	{
 			cursor: pointer;
-			background-color: $grey3;
+			background-color: $grey5;
+			border-left: 1px solid $grey6;
+			border-right: 1px solid $grey6;
 		}
 		
 		&.active	{
-			background-color: $grey5;		
-			border-bottom: 1px solid transparent;	
+			background-color: $grey5;	
+			border-left: 1px solid $grey6;
+			border-right: 1px solid $grey6;
+			
+			&:first-child	{
+				border-left-color: transparent;
+			}
+			
+			&:hover	{
+			}
+			
 		}
 	}
 }
