--- a/styles/_structure.scss
+++ b/styles/_structure.scss
@@ -71,7 +71,7 @@ nav	{
 		
 		flex-grow: 1;
 		height: 100%;
-		opacity: .6;
+		opacity: .4;
 		
 		transition: opacity .3s;
 		
@@ -97,11 +97,32 @@ nav	{
 
 .view	{
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
+	align-items: stretch;
 
 	width: 100%;
 	height: 100vh;
-			
+	
+	.center-main	{
+		flex-grow: 1;
+		flex-shrink: 1;			
+		overflow: hidden;
+	}
+	
+	.center-side	{
+		flex-shrink: 0;
+		overflow: hidden;
+		width: $bigUnit;
+		
+		border-left: 1px solid $grey6;
+		background-color: $grey3;
+	}
+	
+	.center	{
+		display: flex;
+		flex-direction: column;		
+	}		
+
 	.toolbar	{
 		width: 100%;
 		height: $smallUnit;
@@ -137,29 +158,10 @@ nav	{
 		}
 	}
 	
-	.center	{
-		display: flex;
-		flex-direction: row;
-		align-items: stretch;
-		
+	.content	{
 		width: 100%;
 		flex-grow: 1;
-		flex-shrink: 1;
-				
-		.center-main	{
-			flex-grow: 1;
-			flex-shrink: 1;			
-			overflow: hidden;
-		}
-		
-		.center-side	{
-			flex-shrink: 0;
-			width: $bigUnit;
-			overflow: hidden;
-			
-			border-left: 1px solid $grey6;
-			background-color: $grey3;
-		}
+		flex-shrink: 1;		
 	}
 }
 
