Load cards locally and add data corresponding to size

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -41,7 +41,7 @@ $transparentwhite: rgba(255,255,255, .1);
 
 .state-1	{
 	background-color: $lightyellow;
-	color: $black !important;
+// 	color: $black !important;
 }
 
 .state-2	{
