--- a/styles/_viewSchedule.scss
+++ b/styles/_viewSchedule.scss
@@ -4,6 +4,8 @@
 		
 		display: flex;
 		flex-direction: column;
+		
+		overflow: hidden;
 	}
 	
 	.center-side	{
@@ -175,6 +177,7 @@
 	background-color: $grey5;
 	color: $grey0;
 	cursor: pointer;
+	overflow: hidden;
 
 	.header	{
 		border-radius: 3px 3px 0 0;
