Get side-column cards and calculate their duration

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -39,6 +39,10 @@ $transparentwhite: rgba(255,255,255, .1);
 *		STATES		*
 ************************/
 
+.state-0	{
+	//background-color: $grey6;
+}
+
 .state-1	{
 	background-color: $lightyellow;
 // 	color: $black !important;
