--- a/styles/style.css
+++ b/styles/style.css
@@ -237,13 +237,13 @@ nav {
   width: 100%;
   height: 100vh; }
   .view .center-main {
-    -webkit-box-flex: 1;
-    -webkit-flex-grow: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-    -webkit-flex-shrink: 1;
-        -ms-flex-negative: 1;
-            flex-shrink: 1;
+    -webkit-box-flex: 0;
+    -webkit-flex-grow: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
+    -webkit-flex-shrink: 2;
+        -ms-flex-negative: 2;
+            flex-shrink: 2;
     overflow: hidden; }
   .view .center-side {
     -webkit-flex-shrink: 0;
@@ -488,7 +488,7 @@ strong {
 .card-container {
   position: absolute;
   padding: 0 1rem;
-  width: 100%; }
+  width: 20rem; }
 
 .card {
   width: 100%;
@@ -528,3 +528,7 @@ strong {
   .card .handle-bottom {
     bottom: 0;
     cursor: s-resize; }
+
+.center-side .card-container {
+  padding-top: 1rem;
+  position: relative; }
